changes to the cards shadow and hover, fixed the consultation button on the doctor show page, updated the line spacing in buttons to make each section clearer

--- a/app/assets/stylesheets/components/_doctor_show.scss
+++ b/app/assets/stylesheets/components/_doctor_show.scss
@@ -24,3 +24,17 @@
     display: flex;
     justify-content: space-around;
   }
+
+  .consult {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    padding: 10px 30px;
+  }
+  .consult:hover {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    padding: 10px 30px;
+    transform: scale(1.1);
+  }
