--- a/app/assets/stylesheets/components/_horizontal_card.scss
+++ b/app/assets/stylesheets/components/_horizontal_card.scss
@@ -3,7 +3,7 @@
   padding: 20px;
   margin: 20px;
   background-color: white;
-  box-shadow: 0 0 10px $primary;
+  box-shadow: 0 0 10px rgba(0,75,173,0.2);
   #name-field {
     font-size: 22px;
     display: flex;
@@ -14,8 +14,8 @@
   padding: 20px;
   margin: 20px;
   background-color: white;
-  box-shadow: 0px 0px 15px $primary;
-
+  box-shadow: 0 0 15px rgba(0,75,173,0.2);
+  transform: scale(1.1);
 }
 #top-banner {
   display: flex;
